syntax = "proto3";

package pb;

option go_package = "github.com/yuisofull/goload/internal/auth/pb";

// ===== Auth Service =====
service AuthService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse) {}
}

// ===== Auth Messages =====
message CreateAccountRequest {
  string username = 1;
  string password = 2;
}

message CreateAccountResponse {
  uint64 user_id = 1;
}

message CreateSessionRequest {
  string username = 1;
  string password = 2;
}

message CreateSessionResponse {
  string token = 1;
}
